<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="sa.waqood.networkmodule.enums.Status" />

        <variable
            name="resource"
            type="sa.waqood.networkmodule.Resource" />

        <variable
            name="callback"
            type="sa.bitoasis.bitoasis.views.signup.SignupCallBack" />

        <variable
            name="viewModel"
            type="sa.bitoasis.bitoasis.views.signup.SignupViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.signup.SignupActivity">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TIEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <EditText
                        android:id="@+id/ETEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Email"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.email}"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TIMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Mobile"
                        android:inputType="phone"
                        android:lines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.mobile}"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TIPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.password}"
                        android:textColor="@android:color/black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TIConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ConfirmPassword"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.confirmPassword}"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:onClick="@{() ->  callback.clickSignup()}"
                    android:text="@string/Sign_up" />


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


    </android.support.design.widget.CoordinatorLayout>
</layout>